--- a/jaguar_serializer/example/index.html
+++ b/jaguar_serializer/example/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1">
     <script defer
-            src="/basic/basic_main.dart"
+            src="example.dart"
             type="application/dart"></script>
     <script defer
             src="/packages/browser/dart.js"></script>
